# d-comms

./: .gitignore  CLAUDE.md  CMakeLists.txt  Makefile  README.md
.github/workflows/: build.yml
src/: aes.c  aes.h  compat.c  compat.h  dht_client.c  dht_client.h  proto.c  proto.h  sha256.c  sha256.h  sync.c  sync.h  upnp.c  upnp.h
src/ui/: app.cpp  main_desktop.cpp
tests/: test_compat.h  test_crypto.c  test_proto.c  test_sync.c
